fix link property has 2 borders when collapsed

--- a/src/css/property-tool.less
+++ b/src/css/property-tool.less
@@ -207,7 +207,7 @@
     }
 
     /* link editor */
-    .link-pane {
+    .expanded .link-pane {
       display: flex;
       input:disabled { cursor: default; }
       .link-state {
